# entropy-map

./: Cargo.toml  Makefile  README.md
benches/: map_with_dict.rs  map_with_dict_benchmark.rs  map_with_dict_bitpacked.rs  map_with_dict_bitpacked_benchmark.rs  mphf.rs  mphf_benchmark.rs  rank.rs  rank_benchmark.rs  set.rs
examples/: map_with_dict.rs  map_with_dict_bitpacked.rs  mphf.rs  set.rs
src/: lib.rs  map_with_dict.rs  map_with_dict_bitpacked.rs  mphf.rs  rank.rs  set.rs
