[package]
name = "entropy-map"
version = "0.1.0"
edition = "2021"
authors = ["Alex Bocharov <bocharov.alexandr@gmail.com>"]
description = "Ultra-low latency hash map using minimal perfect hash functions and compact encoding of values, minimizing memory footprint and storage size for efficient data retrieval."
documentation = "https://docs.rs/entropy-map"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/cloudflare/entropy-map"
keywords = ["entropy", "map", "hashing", "minimal", "perfect"]
categories = ["algorithms", "data-structures"]

[dependencies]
bitpacking = "0.9.2"
fxhash = "0.2.1"
num = "0.4.1"

[dev-dependencies]
bitvec = "1.0.1"
paste = "1.0.14"
rand = "0.8.5"
rand_chacha = "0.3.1"
test-case = "3.3.1"